--- a/Teacher3/pages/index/index.wxss
+++ b/Teacher3/pages/index/index.wxss
@@ -1,5 +1,6 @@
 .page-head {
     position: relative;
+    height: 395rpx;
 }
 
 .head-bg {
@@ -9,8 +10,6 @@
 }
 
 .head-img {
-    position: relative;
-    top: -61rpx;
     width: 126rpx;
     height: 126rpx;
     border-radius: 50%;
@@ -19,8 +18,6 @@
 }
 
 .tel-icon {
-    position: relative;
-    top: 16rpx;
     margin-right: 30rpx;
     width: 40rpx;
     height: 40rpx;
@@ -32,8 +29,6 @@
 }
 
 button {
-    position: relative;
-    top: 16rpx;
     display: inline-block;
     margin-left: 30rpx;
     margin-right: 0;
@@ -55,7 +50,7 @@ button::after {
 }
 
 .page-section {
-    padding-top: 395rpx;
+    padding-top: 90rpx;
     width: 100%;
 }
 
@@ -276,9 +271,14 @@ swiper {
 }
 
 .head-img-box {
+    position: absolute;
+    bottom: -59rpx;
+    left: 50%;
+    transform: translateX(-50%);
     display: flex;
     justify-content: center;
-    height: 70rpx;
+    height: 118rpx;
+    z-index: 99;
 }
 
 .person-des-box {
@@ -298,7 +298,7 @@ swiper {
 }
 
 .person-xy-txt {
-    font-size: 38prx;
+    font-size: 38rpx;
     font-weight: bold;
     color: #363636;
 }
@@ -368,6 +368,7 @@ swiper {
     justify-content: center;
     margin-top: 20rpx;     
     width: 100%;
+    height: 360rpx;
 }
 
 video {
@@ -377,4 +378,5 @@ video {
 
 .person-xy{
     font-size: 38rpx;
+    line-height: 1.5;
 }
