--- a/Teacher4/pages/index/index.wxss
+++ b/Teacher4/pages/index/index.wxss
@@ -1,21 +1,327 @@
-/**index.wxss**/
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.page-head {
+    position: relative;
+    height: 480rpx;
 }
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.head-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
 
-.userinfo-nickname {
-  color: #aaa;
+.head-box {
+    position: absolute;
+    width: 100%;
 }
 
-.usermotto {
-  margin-top: 200px;
+.person-box {
+    margin-top: 210rpx;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.person-head-img {
+    width: 140rpx;
+    border-radius: 50%;
+    border: 4rpx solid #5e5273;
+}
+
+.person-touch {
+    display: flex;
+}
+
+button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100rpx;
+    height: 60rpx;
+    padding-left: 0;
+    padding-right: 0;
+    border: 0;
+    line-height: 0;
+    background: transparent;
+}
+
+button::after {
+    border: 0;
+}
+
+.tel-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100rpx;
+    height: 60rpx;
+}
+
+.tel-img {
+    width: 40rpx;
+}
+
+.share-img {
+    width: 40rpx;
+}
+
+.person-name {
+    position: relative;
+    padding: 10rpx 0;
+    line-height: 1.2;
+}
+
+.person-name::after {
+    position: absolute;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4rpx;
+    background: #5e5273;
+}
+
+.person-position {
+    position: relative;
+    padding: 10rpx 0;
+}
+
+.person-position::before {
+    position: absolute;
+    left: -70rpx;
+    top: 50%;
+    content: "";
+    display: block;
+    width: 50rpx;
+    height: 2rpx;
+    background: #5e5273;
+}
+
+.person-position::after {
+    position: absolute;
+    right: -70rpx;
+    top: 50%;
+    content: "";
+    display: block;
+    width: 50rpx;
+    height: 2rpx;
+    background: #5e5273;
+}
+
+.button-hover {
+    background-color: transparent;
+}
+
+.page-section {
+    padding-top: 80rpx;
+}
+
+.sm-box {
+    position: relative;
+    display: flex;
+    height: 680rpx;
+    overflow: hidden;
+    border-bottom: 2rpx dashed #a68ab6;
+}
+
+.sm-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+.sm-left-box {
+    position: relative;
+    top: 50rpx;
+    display: flex;
+    flex-direction: column;
+    margin-left: 20rpx;
+    width: 340rpx;
+}
+
+.sm-item-num {
+    margin-right: 10rpx;
+    width: 38rpx;
+    height: 38rpx;
+    border-radius: 50%;
+    background: #5e5273;
+    color: #fff;
+    text-align: center;
+    line-height: 38rpx;
+}
+
+.sm-item {
+    position: relative;
+    display: flex;
+    align-items: center;
+    margin-top: 30rpx;
+}
+
+.sm-item::after {
+    position: absolute;
+    left: -18rpx;
+    bottom: -20rpx;
+    display: block;
+    content: "";
+    width: 375rpx;
+    height: 2rpx;
+    background: #d2c4da;
+}
+
+.sm-item-txt {
+    width: 280rpx;
+    color: #505050;
+}
+
+.sm-right-box {
+    position: relative;
+    top: 20rpx;
+    display: flex;
+    flex-direction: column;
+    margin-left: 40rpx;
+    width: 340rpx;
+}
+
+.last-item::after {
+    background: transparent;
+}
+
+.right-item::after {
+    left: -8rpx;
+}
+
+.group-reduce {
+    margin-top: 46rpx;
+}
+
+.group-reduce-img {
+    width: 100%;
+}
+
+.group-txt {
+    padding: 20rpx 43rpx;
+    padding-bottom: 50rpx;
+    border-bottom: 2rpx dashed #a68ab6;
+    text-align: justify;
+}
+
+.pink {
+    color: #e287a7;
+}
+
+.num-txt {
+    display: inline-block;
+}
+
+video {
+    width: 620rpx;
+    height: 300rpx;
+}
+
+.group-detail {
+    display: flex;
+    justify-content: center;
+    margin-top: 40rpx;
+}
+
+.mx-box {
+    border-bottom: 2rpx dashed #a68ab6;
+}
+
+.mx-title-img {
+    width: 100%;
+    margin-top: 30rpx;
+}
+
+.mx-des {
+    padding-left: 50rpx;
+    width: 600rpx;
+}
+
+.mx-pro-box {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 0 auto;
+    padding-bottom: 20rpx;
+    width: 670rpx;
+}
+
+.mx-pro-img {
+    border-radius: 6rpx;
+    border: 4rpx solid #5e5273;
+    width: 304rpx;
+}
+
+.mx-pro-title {
+    text-align: center;
+}
+
+.mx-pro-item {
+    margin-top: 30rpx;
+}
+
+.company-des {
+    position: relative;
+}
+
+.company-title-img {
+    margin-top: 30rpx;
+    width: 100%;
+}
+
+.company-bg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+}
+
+.company-detail-box {
+    position: absolute;
+    padding-top: 6rpx;
+}
+
+.company-des-title {
+    text-align: center;
+}
+
+.company-des-txt {
+    padding: 4rpx 24rpx;
+    margin: 0 auto;
+    font-size: 22rpx;
+    border: 4rpx dashed #fff;
+    border-radius: 10rpx;
+    width: 86%;
+    text-align: justify;
+}
+
+.join-box{
+    padding-top: 540rpx;
+}
+
+.join-img {
+    width: 100%;
+}
+
+.join-img-s {
+    width: 100%;
+}
+
+.qr-img{
+    width: 110rpx;
+}
+
+.join-detail{
+    display: flex;
+    justify-content: space-between;
+    padding: 30rpx;
+}
+
+.join-item{
+    display: flex;
+}
+
+.join-touch{
+    line-height: 1.5;
 }
