--- a/Tmenu/pages/index/index.wxml
+++ b/Tmenu/pages/index/index.wxml
@@ -80,6 +80,15 @@
                 </view>
                 <view class="slide-line"></view>
             </view>
+            <view class="slide-box" wx:if="{{shop_info.spread?true:false}}">
+                <view class="slide-title-box">
+                    <view class="slide-title-ch txt-title-ch">门店视频</view>
+                    <view class="slide-title-en txt-title-en">VIDEO</view>
+                </view>
+                <view class="slide-content">
+                    <video class='video' src='{{shop_info.spread}}' controls></video>
+                </view>
+            </view>
             <view class="slide-box">
                 <view class="slide-title-box">
                     <view class="slide-title-ch txt-title-ch">优惠活动</view>
