--- a/Teacher3/pages/index/index.wxss
+++ b/Teacher3/pages/index/index.wxss
@@ -9,16 +9,9 @@
     height: 395rpx;
 }
 
-.head-img {
-    width: 126rpx;
-    height: 126rpx;
-    border-radius: 50%;
-    border: 4rpx solid #fff;
-    box-sizing: border-box;
-}
-
 .tel-icon {
-    margin-right: 30rpx;
+    position: relative;
+    top: 6rpx;
     width: 40rpx;
     height: 40rpx;
 }
@@ -28,16 +21,36 @@
     height: 40rpx;
 }
 
+.person-head-box {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    width: 340rpx;
+}
+
+.head-img {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 126rpx;
+    height: 126rpx;
+    border-radius: 50%;
+    border: 4rpx solid #fff;
+    box-sizing: border-box;
+}
+
 button {
+    position: absolute;
+    right: 0;
+    bottom: -40rpx;
     display: inline-block;
-    margin-left: 30rpx;
     margin-right: 0;
     border: 0;
     background: transparent;
     padding-left: 0;
     padding-right: 0;
     line-height: 0;
-    height: 40rpx;
+    padding: 30rpx 30rpx;
 }
 
 button::after {
@@ -366,7 +379,7 @@ swiper {
 .video-box {
     display: flex;
     justify-content: center;
-    margin-top: 20rpx;     
+    margin-top: 20rpx;
     width: 100%;
     height: 360rpx;
 }
@@ -376,7 +389,15 @@ video {
     height: 360rpx;
 }
 
-.person-xy{
+.person-xy {
     font-size: 38rpx;
     line-height: 1.5;
+}
+
+.tel-box {
+    position: absolute;
+    left: 0;
+    bottom: -40rpx;
+    display: inline-block;
+    padding: 28rpx 30rpx;
 }
