--- a/Tmaster/Tmaster/pages/store/store.wxml
+++ b/Tmaster/Tmaster/pages/store/store.wxml
@@ -6,9 +6,9 @@
 	<view class="section">
 		<view class="bg">伯格网络科技有限公司<span>></span></view>
 		<view class="bg">伯格电子菜谱<span>></span></view>
-		<view class="add" bindtap="btnStore"><span>+</span>添加门店</view>
-		<view class="add" bindtap="btnCook"><span>+</span>添加菜谱</view>
-		<view class="add" style="border: none"><span>+</span>添加餐桌</view>
+		<view class="add" bindtap="btnStore"><span>+</span>门店信息管理</view>
+		<view class="add" bindtap="btnCook"><span>+</span>菜谱管理</view>
+		<view class="add" style="border: none"><span>+</span>桌位管理</view>
 	</view>
 </view>
 
