--- a/Teacher4/pages/index/index.wxml
+++ b/Teacher4/pages/index/index.wxml
@@ -1,17 +1,17 @@
 <view class="page-container">
     <view class='page-head'>
-        <image class='head-bg' src='../../assets/images/tc4_hd_bg.png' mode='widthFix'></image>
+        <image class='head-bg' src='{{data.bg1}}'></image>
         <view class='head-box'>
             <view class='person-box'>
-                <image class='person-head-img' src='../../assets/images/tc4_person_hd.jpg' mode='widthFix'></image>
-                <view class='person-name p m b'>张丽雅</view>
-                <view class='person-position p ms'>金牌总代</view>
+                <image class='person-head-img' src='../../assets/images/tc4_person_hd.jpg'></image>
+                <view class='person-name p m b'>{{data.name}}</view>
+                <view class='person-position p ms'>{{data.explain}}</view>
                 <view class='person-touch'>
                     <view class='tel-btn' bindtap='call'>
-                        <image class='tel-img' src='../../assets/images/tc4_tel_icon.png' mode='widthFix'></image>
+                        <image class='tel-img' src='../../assets/images/tc4_tel_icon.png'></image>
                     </view>
                     <button open-type='share'>
-                        <image class='share-img' src='../../assets/images/tc4_share_icon.png' mode='widthFix'></image>
+                        <image class='share-img' src='../../assets/images/tc4_share_icon.png'></image>
                     </button>
                 </view>
             </view>
@@ -19,7 +19,7 @@
     </view>
     <view class='page-section'>
         <view class='sm-box'>
-            <image class='sm-bg' src='../../assets/images/tc4_sm_bg.png' mode='widthFix'></image>
+            <image class='sm-bg' src='{{data.title1[0]}}'></image>
             <view class='sm-left-box'>
                 <view class='sm-item'>
                     <view class='sm-item-num m'>1</view>
@@ -82,71 +82,51 @@
             <view class='sm-right-box'></view>
         </view>
         <view class='group-reduce'>
-            <image class='group-reduce-img' src='../../assets/images/tc4_td_img.jpg' mode='widthFix'></image>
+            <image class='group-reduce-img' src='{{data.team.img}}'></image>
             <view class='group-detail'>
-                <video class='video' src='' controls></video>
+                <video class='video' src='http://img.my-shop.cc/video/tc4_td.mp4' controls></video>
             </view>
             <view class='group-txt m p'>
-                张丽雅，从踏入微商一个月卖不出一盒货到现在月收入破
-                <view class='num-txt pink'>70</view>
-                万培养了总代80人，其中月收入过
-                <view class='num-txt pink'>50</view>
-
-                万的总代就有5人，50个总代月收入过
-                <view class='num-txt pink'>30</view>
-                万。在2016年年会被公司评为四大金牌总代，2017年亲自又培养了一个金牌总代！
+                {{data.team.txt}}
             </view>
         </view>
         <view class='mx-box'>
-            <image class='mx-title-img' src='../../assets/images/tc4_mx_title.png' mode='widthFix'></image>
-            <view class='mx-des m b p'>瘦身、养生、补肾、肩颈暖护,就找张丽雅！</view>
-            <view class='mx-des m b p'>您身边的养身专家！</view>
+            <image class='mx-title-img' src='{{data.product.img}}'></image>
+            <view class='mx-des m b p'>{{data.product.describe}}</view>
             <view class='mx-pro-box'>
-                <view class='mx-pro-item'>
-                    <image class='mx-pro-img' src='../../assets/images/tc4_menu1.jpg' mode='widthFix' data-i='{{1}}' bindtap='nav'></image>
-                    <view class='mx-pro-title l p b'>古方暖护包</view>
+                <view class='mx-pro-item' wx:for="{{data.product.details}}">
+                    <image class='mx-pro-img' src='{{item.img}}' data-i='{{index+1}}' bindtap='nav'></image>
+                    <view class='mx-pro-title l p b'>{{item.name}}</view>
                 </view>
-                <view class='mx-pro-item'>
-                    <image class='mx-pro-img' src='../../assets/images/tc4_menu2.jpg' mode='widthFix' data-i='{{2}}' bindtap='nav'></image>
-                    <view class='mx-pro-title l p b'>古方纤秀包</view>
-                </view>
-                <view class='mx-pro-item'>
-                    <image class='mx-pro-img' src='../../assets/images/tc4_menu3.jpg' mode='widthFix' data-i='{{3}}' bindtap='nav'></image>
-                    <view class='mx-pro-title l p b'>古方养护包</view>
-                </view>
-                <view class='mx-pro-item'>
-                    <image class='mx-pro-img' src='../../assets/images/tc4_menu4.jpg' mode='widthFix' data-i='{{4}}' bindtap='nav'></image>
-                    <view class='mx-pro-title l p b'>肩颈暖护包</view>
-                </view>
+                
             </view>
         </view>
         <view class='company-box'>
-            <image class='company-title-img' src='../../assets/images/tc4_cpmpany_title.png' mode='widthFix'></image>
+            <image class='company-title-img' src='{{data.introduce.img}}'></image>
             <view class='company-des'>
-                <image class='company-bg' src='../../assets/images/tc4_cpmpany_bg.jpg' mode='widthFix'></image>
+                <image class='company-bg' src='{{data.introduce.image}}'></image>
                 <view class='company-detail-box'>
-                    <view class='company-des-title m b w'>草本 • 健康 • 美丽</view>
-                    <view class='company-des-txt w'>羽悦本草健康科技股份有限公司是良兄国际集团的全资子公司，公司位于深圳，成立于2017年1月16日。羽悦本草健康科技有限公司是一家以植物草本养生保健为基础的健康养生产业公司，其业务涵盖生产、零售及分销现代化健康养生产品。 羽悦本草健康科技股份有限公司，是一家以植物草本和草本植物精华为核心，生产功能型食品、健康养生产品的高科技企业。作为一家草本植物多位一体的健康科技研发型企业，羽悦本草坚持质量和创新作为品牌经营的基础，着力研发健康产业高品质的产品，羽悦本草本着拓展全渠道营销的模式，线上建立遍布国内外的营销体系，线下大力发展各大渠道的门店，羽悦本草品牌在国内外市场上赢得了良好的美誉，成为同行业领域的优势品牌。
-                        公司代表中国微商参加中韩两国微商研讨会；羽悦本草品牌成为“411移动电商节”联合发起人；“第二届微商春晚”的联合发起人；羽悦本草的产品入选为《CCTV央视网商城优选品牌》；荣获“2016十大重诚信品牌之一”。
+                    <view class='company-des-title m b w'>{{data.introduce.title}}</view>
+                    <view class='company-des-txt w'>{{data.introduce.detail}}
                     </view>
                 </view>
             </view>
         </view>
         <view class='join-box'>
-            <image class='join-img' src='../../assets/images/tc4_join_title.png' mode='widthFix'></image>
-            <image class='join-img-s' src='../../assets/images/tc4_join_title2.png' mode='widthFix' bindtap='previeImg'></image>
+            <image class='join-img' src='{{data.join.title}}'></image>
+            <image class='join-img-s' src='../../assets/images/tc4_join_title2.png' bindtap='previeImg'></image>
             <view class='join-detail p'>
                 <view class='join-touch m'>
                     <view class='join-title'>联系方式</view>
                     <view class='join-item'>公司地址：
-                        <view class='join-txt'>深圳市罗湖区京基100大厦5303</view>
+                        <view class='join-txt'>{{data.join.address}}</view>
                     </view>
                     <view class='join-item'>联系电话：
-                        <view class='join-txt'>4008265533</view>
+                        <view class='join-txt'>{{data.join.phone}}</view>
                     </view>
                 </view>
-                <view class='join-qr-code' bindtap='scan'>
-                    <image class='qr-img' src='../../assets/images/tc4_qr_code.png' mode='widthFix'></image>
+                <view class='join-qr-code' bindtap='previeImg'>
+                    <image class='qr-img' src='{{data.join.code}}'></image>
                 </view>
             </view>
         </view>
