--- a/Teacher3/pages/index/index.wxml
+++ b/Teacher3/pages/index/index.wxml
@@ -4,11 +4,11 @@
         <view class='head-img-box'>
             <view class='person-head-box'>
                 <view class='tel-box' bindtap='call'>
-                    <image class='tel-icon' src='../../assets/images/tc3_tel_icon1.png'  mode='widthFix'></image>
+                    <image class='tel-icon' src='../../assets/images/tc3_tel_icon1.png'  ></image>
                 </view>
-                <image class='head-img' src='../../assets/images/portrait.jpg' mode='widthFix'></image>
+                <image class='head-img' src='../../assets/images/portrait.jpg' ></image>
                 <button class='share-btn' open-type='share'>
-                    <image class='share-icon' src='../../assets/images/tc3_share_icon1.png'  mode='widthFix'></image>
+                    <image class='share-icon' src='../../assets/images/tc3_share_icon1.png'  ></image>
                 </button>
             </view>
         </view>
@@ -25,12 +25,12 @@
                     <view class='person-xy-txt'>把保险带给千家万户!</view>
                 </view>
                 <view class='person-ad'>
-                    <image class='person-ad-img' src='http://img.my-shop.cc/teacher/tc3_person_ad.png?2' mode='widthFix'></image>
+                    <image class='person-ad-img' src='http://img.my-shop.cc/teacher/tc3_person_ad.png' ></image>
                 </view>
             </view>
         </view>
         <view class='company-reduce'>
-            <image class='reduce-head' src='http://img.my-shop.cc/teacher/tc3_reduce_title.png?1' mode='widthFix'></image>
+            <image class='reduce-head' src='http://img.my-shop.cc/teacher/tc3_reduce_title.png?1' ></image>
             <view class='reduce-txt'>
                 中国平安保险（集团）股份有限公司（以下简称“中国平安” ）于1988年诞生于深圳蛇口，是中国第一家股份制保险企业，至今已经发展成为金融保险、银行投资等金融业务为一体的整合紧密、多元的综合金融服务集团。2017年6月，《2017BrandZ最具价值全球品牌100强》公布中国平安排名第61位；7月31日，《财富》中国500强排行榜发布，中国平安保险（集团）股份有限公司排名第五。 2017年9月，中国平安保险（集团）股份有限公司在2017中国企业500强中，排名第八。
             </view>
@@ -42,12 +42,12 @@
             <swiper indicator-dots="{{true}}" autoplay="{{true}}" interval="{{5000}}" duration="{{700}}" wx:if="{{user_data.banner.length>0?true:false}}">
                 <block wx:for="{{user_data.banner}}">
                     <swiper-item>
-                        <image src="{{item+'?1'}}" class="slide-image" mode='widthFix' />
+                        <image src="{{item+'?1'}}" class="slide-image"  />
                     </swiper-item>
                 </block>
             </swiper>
             <view class='story-box'>
-                <image class='arrow-img' src='http://img.my-shop.cc/teacher/tc3_arrow.jpg' mode='widthFix'></image>
+                <image class='arrow-img' src='http://img.my-shop.cc/teacher/tc3_arrow.jpg' ></image>
                 <view class='story-des-box'>
                     <view class='story-des m b'>
                         <view class='story-txt'>{{user_data.deeds["1"].content}}</view>
@@ -113,12 +113,12 @@
         <!-- <image class='se-bg' src='http://img.my-shop.cc/teacher/tc3_se_bg.jpg'></image> -->
         <view class='img-content'>
             <view class='bx-box'>
-                <image class='bx-title-img' src='http://img.my-shop.cc/teacher/tc3_bx_title.png' mode='widthFix'></image>
+                <image class='bx-title-img' src='http://img.my-shop.cc/teacher/tc3_bx_title.png' ></image>
                 <view class='video-box'>
                     <video src="http://img.my-shop.cc/video/tc3_bx_v.mp4" controls poster='http://img.my-shop.cc/teacher/tc3_v_post.jpg'></video>
                 </view>
                 <view>
-                    <image class='join-us-img' src='http://img.my-shop.cc/teacher/tc3_join_us.jpg' mode='widthFix'></image>
+                    <image class='join-us-img' src='http://img.my-shop.cc/teacher/tc3_join_us.jpg' ></image>
                 </view>
             </view>
             <view class='img-content-title'>
