--- a/Teacher4/pages/first/first.wxss
+++ b/Teacher4/pages/first/first.wxss
@@ -21,12 +21,18 @@
 
 .pro{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     padding-bottom: 20rpx;
     background: #8991cf;
 }
 
+swiper{
+    width: 674rpx;
+    height: 490rpx;
+}
+
 .slide-image{
-    padding: 20rpx 20rpx;
-    width: 650rpx;
+    width: 674rpx;
+    height: 490rpx;
 }
