--- a/Teacher4/pages/forth/forth.wxss
+++ b/Teacher4/pages/forth/forth.wxss
@@ -6,6 +6,7 @@
 
 .bg-img {
     width: 100%;
+    height: 309rpx;
     float: left;
 }
 
@@ -17,19 +18,27 @@
 .pro-title {
     padding: 20rpx 0;
     width: 270rpx;
+    height: 60rpx;
 }
 
 .pro{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     padding-bottom: 20rpx;
     background: #8991cf;
 }
 
-.slide-image{
-    padding: 20rpx 20rpx;
-    width: 650rpx;
+swiper{
+    width: 674rpx;
+    height: 490rpx;
 }
+
+.slide-image{
+    width: 674rpx;
+    height: 490rpx;
+}
+
 
 .video-box{
     display: flex;
@@ -40,4 +49,13 @@
 .video{
     width: 710rpx;
     height: 430rpx;
+}
+
+.bg-img1{
+    width: 100%;
+    height: 507rpx;
+}
+.bg-img2{
+    width: 100%;
+    height: 400rpx;
 }
