--- a/Teacher4/pages/index/index.wxss
+++ b/Teacher4/pages/index/index.wxss
@@ -8,6 +8,7 @@
     top: 0;
     left: 0;
     width: 100%;
+    height: 395rpx;
 }
 
 .head-box {
@@ -24,6 +25,7 @@
 
 .person-head-img {
     width: 140rpx;
+    height: 140rpx;
     border-radius: 50%;
     border: 4rpx solid #5e5273;
 }
@@ -59,10 +61,12 @@ button::after {
 
 .tel-img {
     width: 40rpx;
+    height: 40rpx;
 }
 
 .share-img {
     width: 40rpx;
+    height: 40rpx;
 }
 
 .person-name {
@@ -128,6 +132,7 @@ button::after {
     top: 0;
     left: 0;
     width: 100%;
+    height: 620rpx;
 }
 
 .sm-left-box {
@@ -196,6 +201,7 @@ button::after {
 
 .group-reduce-img {
     width: 100%;
+    height: 391rpx;
 }
 
 .group-txt {
@@ -221,7 +227,7 @@ video {
 .group-detail {
     display: flex;
     justify-content: center;
-    margin-top: 40rpx;
+    padding-top: 40rpx;
 }
 
 .mx-box {
@@ -230,6 +236,7 @@ video {
 
 .mx-title-img {
     width: 100%;
+    height: 86rpx;
     margin-top: 30rpx;
 }
 
@@ -251,6 +258,7 @@ video {
     border-radius: 6rpx;
     border: 4rpx solid #5e5273;
     width: 304rpx;
+    height: 180rpx;
 }
 
 .mx-pro-title {
@@ -268,6 +276,7 @@ video {
 .company-title-img {
     margin-top: 30rpx;
     width: 100%;
+    height: 96rpx;
 }
 
 .company-bg {
@@ -275,6 +284,7 @@ video {
     left: 0;
     top: 0;
     width: 100%;
+    height: 510rpx;
 }
 
 .company-detail-box {
@@ -302,14 +312,17 @@ video {
 
 .join-img {
     width: 100%;
+    height: 96rpx;
 }
 
 .join-img-s {
     width: 100%;
+    height: 49rpx;
 }
 
 .qr-img{
     width: 110rpx;
+    height: 150rpx;
 }
 
 .join-detail{
