--- a/Teacher4/pages/second/second.wxml
+++ b/Teacher4/pages/second/second.wxml
@@ -1,21 +1,22 @@
 <view class="page-container">
-    <image class='bg-img' src='../../assets/images/menu2_1.jpg' mode='widthFix'></image>
+    <image class='bg-img' src='{{data.content[0]}}' ></image>
     <view style='clear:both;'></view>
     <view class='pro'>
-        <image class='pro-title' src='../../assets/images/prd_title.png' mode='widthFix'></image>
+        <image class='pro-title' src='../../assets/images/prd_title.png' ></image>
         <swiper indicator-dots="{{true}}" autoplay="{{true}}" interval="{{5000}}" duration="{{700}}">
-            <block wx:for="{{imgUrls}}">
+            <block wx:for="{{data.banner}}">
                 <swiper-item>
-                    <image src="{{item}}" class="slide-image"/>
+                    <image src="{{item}}" class="slide-image" />
                 </swiper-item>
             </block>
         </swiper>
     </view>
-    <image class='bg-img' src='../../assets/images/menu2_2.jpg' mode='widthFix'></image>
-    <image class='bg-img' src='../../assets/images/menu2_3.jpg' mode='widthFix'></image>
+    <image class='bg-img1' src='{{data.content[1]}}' ></image>
+    <image class='bg-img2' src='{{data.content[2]}}' ></image>
     <view style='clear:both;'></view>
     <view class='video-box'>
-        <video class='video' src='' controls poster=''></video>
+        <video class='video' src='http://img.my-shop.cc/video/tc4_xx_v.mp4?1'
+            controls poster=''></video>
     </view>
     <view class='blank'></view>
 </view>
