--- a/Tmaster/Tmaster/pages/updateCate/updateCate.wxss
+++ b/Tmaster/Tmaster/pages/updateCate/updateCate.wxss
@@ -65,3 +65,12 @@ button{
 .gray{
     color: #808080;
 }
+
+radio-group {
+    margin-left: 30rpx;
+}
+
+label{
+    font-size: 28rpx;
+    margin: 0 20rpx;
+}
