--- a/Teacher5/pages/index/index.wxss
+++ b/Teacher5/pages/index/index.wxss
@@ -1,15 +1,321 @@
-
-.page-container{
+.page-container {
     width: 100%;
 }
 
-.page-head{
+.page-head {
     position: relative;
+    height: 395rpx;
 }
 
-.hd-bg{
+.page-head::after {
+    position: absolute;
+    bottom: -40rpx;
+    left: 50%;
+    transform: translateX(-50%);
+    content: "";
+    display: block;
+    border: 20rpx solid transparent;
+    border-top: 20rpx solid #38354c;
+}
+
+.hd-bg {
     position: absolute;
     width: 100%;
     height: 395rpx;
 }
 
+.person-box {
+    position: absolute;
+    bottom: 30rpx;
+    width: 100%;
+}
+
+.person-head-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.p-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 124rpx;
+    height: 124rpx;
+    border: 2rpx solid #fff;
+    border-radius: 50%;
+}
+
+.person-head {
+    width: 120rpx;
+    height: 120rpx;
+    border-radius: 50%;
+}
+
+.btn-img {
+    width: 40rpx;
+    height: 40rpx;
+}
+
+button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 20rpx;
+    width: 70rpx;
+    height: 70rpx;
+    padding-left: 0;
+    padding-right: 0;
+    border: 0;
+    background: transparent;
+}
+
+button::after {
+    border: 0;
+}
+
+.button-hover {
+    background: transparent;
+}
+
+.tel-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70rpx;
+    height: 70rpx;
+}
+
+.btn-box {
+    position: relative;
+    display: flex;
+}
+
+.btn-box::before {
+    position: absolute;
+    top: 50%;
+    left: -180rpx;
+    content: "";
+    display: block;
+    width: 154rpx;
+    height: 2rpx;
+    background: #9798a3;
+}
+
+.btn-box::after {
+    position: absolute;
+    top: 50%;
+    right: -180rpx;
+    content: "";
+    display: block;
+    width: 154rpx;
+    height: 2rpx;
+    background: #9798a3;
+}
+
+.person-name {
+    margin-top: 10rpx;
+    line-height: 1.5;
+}
+
+.person-position {
+    line-height: 1.5;
+}
+
+.company-img {
+    margin-top: 40rpx;
+    width: 100%;
+    height: 184rpx;
+}
+
+.company-title {
+    margin-top: 10rpx;
+}
+
+.company-box {
+    margin-top: 20rpx;
+    text-align: center;
+}
+
+.company-detail {
+    line-height: 1.5;
+}
+
+.company-serv-top {
+    width: 100%;
+    height: 520rpx;
+}
+
+.company-serv-bg {
+    width: 100%;
+    height: 256rpx;
+}
+
+.company-serv {
+    margin-top: 30rpx;
+}
+
+.course-title-img {
+    width: 100%;
+    height: 121rpx;
+}
+
+.course-img {
+    width: 296rpx;
+    height: 166rpx;
+    border: 4rpx solid #534964;
+}
+
+.course-icon {
+    width: 40rpx;
+    height: 40rpx;
+}
+
+.course-item-box {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0 44rpx;
+    padding-bottom: 44rpx;
+}
+
+.course-title {
+    margin-left: 20rpx;
+}
+
+.course-detail {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.course-item {
+    margin-top: 30rpx;
+}
+
+.center-bg {
+    width: 100%;
+    height: 188rpx;
+}
+
+.know-title {
+    width: 100%;
+    height: 65rpx;
+}
+
+.know-des {
+    position: relative;
+    top: 20rpx;
+    padding: 14rpx 20rpx;
+    border: 4rpx solid #38354c;
+    margin: 0 auto;
+    width: 590rpx;
+    text-align: center;
+}
+
+.know-des-txt {
+    line-height: 1.5;
+}
+
+.arrow {
+    display: block;
+    position: absolute;
+    top: -20rpx;
+    left: 50%;
+    margin-left: -15rpx;
+    width: 30rpx;
+    height: 30rpx;
+    border-left: 4rpx solid #38354c;
+    border-top: 4rpx solid #38354c;
+    transform: rotate(45deg);
+    background: #fff;
+}
+
+.know-video-box {
+    margin-top: 60rpx;
+    display: flex;
+    justify-content: center;
+}
+
+.know-video {
+    width: 680rpx;
+    height: 360rpx;
+}
+
+.cust-box {
+    margin-top: 40rpx;
+}
+
+.cust-title {
+    padding-left: 35rpx;
+    line-height: 2;
+}
+
+.cust-video {
+    width: 680rpx;
+    height: 360rpx;
+}
+
+.cust-video-box {
+    display: flex;
+    justify-content: center;
+}
+
+swiper {
+    margin: 0 auto;
+    width: 678rpx;
+    height: 460rpx;
+}
+
+.mr-box {
+    margin-top: 40rpx;
+}
+
+.stu-box {
+    margin-top: 40rpx;
+}
+
+.stu-img-box {
+    padding: 0 40rpx;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.stu-img {
+    margin-top: 10rpx;
+    width: 330rpx;
+    height: 360rpx;
+}
+
+
+.page-foot{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 100rpx;
+}
+
+.info-box{
+    color: #4b4b4b;
+}
+
+.qr-img{
+    width: 172rpx;
+    height: 204rpx;
+}
+
+.info-box{
+    display: flex;
+    margin-top: 30rpx;
+    padding-bottom: 30rpx;
+}
+
+.info-com-tel{
+    margin-left: 20rpx;
+}
+
+.slide-image{
+    width: 678rpx;
+    height: 360rpx;
+}
