--- a/Tmaster/Tmaster/pages/dishList/dishList.wxss
+++ b/Tmaster/Tmaster/pages/dishList/dishList.wxss
@@ -1,6 +1,6 @@
 /* pages/dishList/dishList.wxss */
 
-.title{
+.title {
     position: fixed;
     top: 0;
     left: 0;
@@ -11,21 +11,64 @@
     border-bottom: 4rpx solid #f2f2f2;
 }
 
-.dish-box{
+.dish-box {
     padding-top: 92rpx;
 }
 
-.dish-item{
-    padding: 20rpx 20rpx;  
+.dish-item {
+    padding: 20rpx 20rpx;
     display: flex;
     background: #fff;
 }
 
-.dish-img{
+.dish-img {
     width: 144rpx;
     height: 144rpx;
 }
 
-.dish-detail-box{
+.dish-detail-box {
     flex-grow: 1;
+}
+
+.btn-box {
+    display: flex;
+}
+
+.btn-outer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15rpx 15rpx;
+    margin-left: 20rpx;
+}
+
+.btn-edit, .btn-edit {
+    width: 40rpx;
+    height: 40rpx;
+}
+
+.dish-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.dish-bottom {
+    display: flex;
+    justify-content: space-between;
+}
+
+.dish-item {
+    border-bottom: 2rpx solid #f2f2f2;
+}
+
+.dish-detail-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-bottom: 14rpx;
+}
+
+.dish-spec{
+    padding-right: 20rpx;
 }
