--- a/Tmaster/Tmaster/app.wxss
+++ b/Tmaster/Tmaster/app.wxss
@@ -1,60 +1,67 @@
 /**app.wxss**/
+
 .container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-} 
-.page-container{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 200rpx 0;
+    box-sizing: border-box;
+}
+
+.page-container {
     display: block;
     width: 100%;
 }
-page{
+
+page {
     background: #fdfdfd;
 }
 
-.page-foot{
+.page-foot {
     padding: 110rpx 0 40rpx 0;
     font-size: 20rpx;
     text-align: center;
     color: #ccc;
 }
 
-.l{
+.l {
     font-size: 32rpx;
 }
 
-.ls{
+.ls {
     font-size: 30rpx;
 }
 
-.m{
+.m {
     font-size: 28rpx;
 }
 
-.ms{
+.ms {
     font-size: 24rpx;
 }
 
-.s{
+.s {
     font-size: 20rpx;
 }
 
-.b{
+.b {
     font-weight: bold;
 }
 
-.w{
+.w {
     color: #fff;
 }
 
-.g{
+.g {
     color: #a4a4a4;
 }
 
-.red{
+.red {
     color: #be3838;
+}
+
+.green {
+    color: #509863;
 }
