--- a/Tmaster/Tmaster/pages/updateDish/updateDish.wxml
+++ b/Tmaster/Tmaster/pages/updateDish/updateDish.wxml
@@ -1,11 +1,11 @@
 <view class="page-container">
     <view class='page-section'>
-        <view class='form-title'>请输入分类信息</view>
+        <view class='form-title'>请输入菜品信息</view>
         <view class='form-section'>
             <form class='form-content' bindsubmit="formSubmit">
                 <view class="section">
-                    <view class="section-title">分类名称</view>
-                    <input class='input-txt' name="cate_name" value='{{curr_cate.name}}' placeholder="请输入分类名称" />
+                    <view class="section-title">菜品名称</view>
+                    <input class='input-txt' name="title" value='{{curr_dish.title}}' placeholder="请输入菜品名称" />
                 </view>
                 <view class="section">
                     <view class="section-title">所属分类</view>
@@ -15,14 +15,22 @@
                         </view>
                     </picker>
                 </view>
-                <!-- <view class="section">
-                    <view class="section-title">是否隐藏</view>
-                    <radio-group class="radio-group" bindchange="radioChange">
-                        <label class="radio" wx:for="{{hideList}}">
-                            <radio value="{{item.value}}" checked="{{item.checked}}" />{{item.name}}
-                        </label>
-                    </radio-group>
-                </view> -->
+                <view class="section">
+                    <view class="section-title">菜品价格</view>
+                    <input class='input-txt' type='number' name="price" value='{{curr_dish.price}}' placeholder='请输入菜品价格'></input>
+                </view>
+                <view class="section">
+                    <view class="section-title">菜品图片</view>
+                    <!-- <view class='dish-img-box' bindtap='upImg' wx:if="{{!show_pic}}"></view> -->
+                    <image class='dish-img' src='{{curr_dish.image}}' bindtap='upImg'></image>
+                    <view class='up-img-msg m {{is_finish===0?"txt-g":is_finish===1?"green":"red"}}' wx:if="{{show_pic}}">{{is_finish===0?"上传中...":is_finish===1?"上传成功！":"上传失败！"}}</view>
+                </view>
+                <view class="section spec-box" wx:for="{{curr_dish.attrs}}">
+                    <view class="section-title">规 格 {{index+1}}</view>
+                    <input class='input-txt spec-input' name="titles_{{index+1}}" type='number' value='{{item.titles}}' placeholder='请输入规格名称'></input>
+                    <input class='input-txt spec-num-input' type='number' name="prices_{{index+1}}" value='{{item.prices}}' placeholder='请输入规格价格'></input>
+                </view>
+                <view class='spec-btn m' bindtap='showSpec'>{{spec_num>=1?'继续添加':'点击添加规格'}}</view>
                 <view class='line'></view>
                 <view class="btn-area">
                     <button formType="submit">保存</button>
